--- a/templates/base.html
+++ b/templates/base.html
@@ -1476,6 +1476,12 @@
                             <span>Analytics</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="{{ url_for('tutorial') }}">
+                            <span class="nav-icon">📖</span>
+                            <span>Tutorial</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
