--- a/templates/base.html
+++ b/templates/base.html
@@ -1482,6 +1482,18 @@
                             <span>Tutorial</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="{{ url_for('garden_layout') }}">
+                            <span class="nav-icon">🗺️</span>
+                            <span>Garden Layout</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('planner_list') }}">
+                            <span class="nav-icon">🧮</span>
+                            <span>Seed Planner</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
